# turing_cmd

./: .gitignore  CMakeLists.txt  LICENSE  MAIN  README-EN.md  README-RU.md  README.md  add.json  run.sh  save.json  save2.json  save3.json  saveH.json
.cache/clangd/index/: main.cpp.EDD80ACA31AF1E3A.idx  turing.cpp.FBB9DF0CEBD79B10.idx  turing.hpp.2CE57D62119D0DA0.idx  turingUI.cpp.8D5E686187AAF7E8.idx  turingUI.hpp.78E9AB538BF9753E.idx
include/: debug.hpp  translate.hpp  turing.hpp  turingUI.hpp
src/: main.cpp  translate.cpp  turing.cpp  turingUI.cpp
